# track-id

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  script.sh  track-id.py
.cursor/rules/: uv-track-id-setup.mdc
.github/workflows/: package-validation.yml  publish-pypi.yml
docs/: pypi-release-guide.md
tests/: __init__.py  conftest.py  test_artwork.py  test_bandcamp_api.py  test_config.py  test_data_sources.py  test_discogs_api.py  test_filename_parsing.py  test_id3_tags.py  test_integration.py  test_musicbrainz_api.py  test_soulseek_downloader.py  test_track_id.py
track_id/: __init__.py  bandcamp_api.py  config.py  data_sources.py  discogs_api.py  display.py  enrichment_handlers.py  id3_tags.py  logging_setup.py  mp3_utils.py  musicbrainz_api.py  soulseek_downloader.py  track_id.py  unified_api.py
