[project]
name = "track_id"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.4",
    "typer>=0.16.0",
    "urllib3<2.0.0",
    "mutagen>=1.47.0",
    "rich>=13.0.0",
]

[project.scripts]
track-id = "track_id.track_id:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["track_id"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.17.1",
    "types-requests>=2.31.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
