[project]
name = "track-id"
version = "0.1.3"
description = "CLI for searching and enriching MP3 metadata from Bandcamp, MusicBrainz, and Discogs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "track-id contributors" },
]
keywords = ["mp3", "id3", "metadata", "music", "cli", "bandcamp", "musicbrainz", "discogs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.4",
    "typer>=0.16.0",
    "urllib3<2.0.0",
    "mutagen>=1.47.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/vtasca/track-id"
Repository = "https://github.com/vtasca/track-id"
Issues = "https://github.com/vtasca/track-id/issues"

[project.scripts]
track-id = "track_id.track_id:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["track_id"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.17.1",
    "types-requests>=2.31.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
